# V1

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  PROJECT.md  README.md  colcon_defaults.yaml  dashboard_export.txt
config/: dh_fit_report.txt  self_collision_capsules.yaml
deploy/: roboai-estun.service
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: oem_takeover_roadmap.md
scripts/: 03_verify_hardware.sh  HTTPS_NOTES.md  aliases.sh  backfill_part_features.py  benchmark_perception.sh  convert_robot_step.py  decimate_robot_glb.py  download_model.py  export_trt.py  fit_capsules.py  fit_dh.py  fit_ground_plane.py  fit_multi_capsules.py  generate_dashboard_cert.sh  install_isaac_ros.sh  install_livox.sh  posture.py  (+12 more)
src/cobot_bringup/: CMakeLists.txt  package.xml
src/cobot_bringup/config/: detection.yaml  gripper.yaml  language.yaml  lidar_params.yaml  mid360_config.json  nvblox.yaml  perception.yaml  robot_driver.yaml  safety.yaml  sensor_transforms.yaml  task_planner.yaml
src/cobot_bringup/launch/: calibrate.launch.py  cameras.launch.py  depth_detection.launch.py  full_stack.launch.py  isaac_ros_full.launch.py  lidar.launch.py  nvblox.launch.py  perception_only.launch.py  safety_test.launch.py  sensors.launch.py
src/cobot_bringup/scripts/: align_sensors.py  calibrate_extrinsics.py  collision_monitor.py  interactive_align.py  local_reconstruction.py  measure_transform.py  nanoowl_node.py  nvblox_mesh_adapter.py  ouster_bridge.py  pointcloud_accumulator.py  sensor_tf_publisher.py  tf_broadcaster.py
src/cobot_bringup/systemd/: roboai-accumulator.service  roboai-auto-program.service  roboai-cameras.service  roboai-dashboard.service  roboai-depth-segment.service  roboai-detector.service  roboai-estun.env.example  roboai-estun.service  roboai-executor.service  roboai-fusion.service  roboai-grasp.service  roboai-isaac.service  roboai-lidar-detect.service  roboai-lidar.service  roboai-nvblox.service  roboai-reconstruction.service  roboai-scene-graph.service  roboai-stereo.service  roboai-tf.service
src/cobot_bringup/urdf/: cobot.urdf.xacro
src/cuda_pointcloud/: CMakeLists.txt  package.xml
src/cuda_pointcloud/config/: cuda_pointcloud.yaml
src/cuda_pointcloud/include/cuda_pointcloud/: cuda_pointcloud.hpp
src/cuda_pointcloud/launch/: cuda_pointcloud.launch.py
src/cuda_pointcloud/src/: cloud_concat.cu  cuda_pointcloud_node.cpp  normal_estimation.cu  range_filter.cu  voxel_grid.cu
src/estun_driver/: DEPLOYMENT_AUDIT_2026-07-22.md  PART_2C_ARCHITECTURE.md  PART_2C_LIVE_TEST_LADDER.md  package.xml  setup.cfg  setup.py
src/estun_driver/config/: estun.yaml
src/estun_driver/estun_driver/: collision.py  connect_state.py  estun_driver_node.py  program_executor_node.py  program_ops.py
src/estun_driver/estun_driver/mesh_verts/: __init__.py  base_link.npy  link1_shoulder.npy  link2_upper_arm.npy  link3_forearm.npy  link4_wrist1.npy  link5_wrist2.npy  link6_flange.npy
src/estun_driver/launch/: estun_driver.launch.py
src/estun_driver/systemd/: roboai-estun.env.example  roboai-estun.service
src/estun_driver/test/: test_connect_state.py  test_cycles_codegen.py  test_error_dedup.py  test_payload_header.py
src/gripper_driver/: package.xml  setup.py
src/gripper_driver/gripper_driver/: gripper_node.py
src/inspection_pipeline/: README.md  package.xml  setup.cfg  setup.py
src/inspection_pipeline/config/: default_tolerances.yaml  inspection_node_params.yaml
src/inspection_pipeline/inspection_pipeline/: defect_detection.py  icp_alignment.py  inspection_node.py  reference_manager.py  report_generator.py  statistics_aggregator.py  tier1_dimensional.py  tier2_surface.py  tier3_features.py  utils.py
src/inspection_pipeline/launch/: inspection.launch.py
src/inspection_pipeline/systemd/: roboai-inspection.service
src/inspection_pipeline/test/: test_icp.py  test_report.py  test_storage.py  test_tier1.py  test_tier2.py
src/lidar_object_identifier/: README.md  package.xml  setup.cfg  setup.py
src/lidar_object_identifier/config/: identifier_params.yaml  shape_features.yaml
src/lidar_object_identifier/launch/: lidar_object_identifier.launch.py
src/lidar_object_identifier/lidar_object_identifier/: confidence_scorer.py  ground_extractor.py  identifier_node.py  object_clusterer.py  parts_matcher.py  persistence_tracker.py  shape_analyzer.py  utils.py
src/lidar_object_identifier/systemd/: roboai-lidar-identifier.service
src/lidar_object_identifier/test/: test_clustering.py  test_ground_extraction.py  test_parts_matching.py  test_persistence.py  test_pipeline_end_to_end.py  test_shape_analysis.py
src/motion_optimization/: README.md  package.xml  setup.cfg  setup.py
src/motion_optimization/config/: default_profiles.yaml  default_robot_limits.yaml
src/motion_optimization/config/moveit_config_template/: README.txt
src/motion_optimization/launch/: motion_optimization.launch.py
src/motion_optimization/motion_optimization/: collision_checker.py  kinematics_helper.py  motion_optimizer_node.py  moveit_bridge.py  profile_manager.py  toppra_engine.py  trajectory_smoother.py  utils.py  waypoint_optimizer.py
src/motion_optimization/test/: test_profiles.py  test_smoother.py  test_toppra.py
src/motion_optimization_msgs/: CMakeLists.txt  package.xml
src/motion_optimization_msgs/msg/: MotionProfile.msg  MotionStatistics.msg  OptimizedTrajectory.msg
src/motion_optimization_msgs/srv/: EstimateCycleTime.srv  OptimizeTrajectory.srv  SaveProfile.srv  ValidateMotion.srv
src/occupancy_map/: CMakeLists.txt  package.xml
src/occupancy_map/config/: nvblox.yaml
src/occupancy_map/launch/: nvblox.launch.py
src/occupancy_map/src/: occupancy_map_node.cpp
src/robot_driver/: package.xml  setup.py
src/robot_driver/launch/: robot_driver.launch.py
src/robot_driver/robot_driver/: robot_driver_node.py
src/robot_driver/robot_driver/adapters/: __init__.py  base_adapter.py  dobot_adapter.py  generic_adapter.py  jaka_adapter.py  xarm_adapter.py
src/safety_monitor/: package.xml  setup.py
src/safety_monitor/safety_monitor/: safety_monitor_node.py
(+259 files in other folders)
