<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>estun_driver</name>
  <version>0.1.0</version>
  <description>
    ROS2 driver for Estun Codroid S-Series collaborative robots.
    Connects via WebSocket (ws://ROBOT_IP:9000), publishes joint_states /
    TCP pose / robot mode, accepts jog / motion / I/O commands.
  </description>
  <maintainer email="robot@cobot.local">cobot</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
