<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_optimization</name>
  <version>0.1.0</version>
  <description>
    Motion path optimization for the RoboAi cobot stack.
    Provides TOPP-RA time-optimal trajectory smoothing, spline / blend-radius
    smoothing, and (stubbed) MoveIt2 collision-aware planning.
    Profiles are reusable bundles of motion parameters (Conservative,
    Balanced, Aggressive, or custom). Exposed as ROS2 services consumed by
    the program executor middleware.
  </description>
  <maintainer email="robot@cobot.local">cobot</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>motion_optimization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
