<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.1.0</version>
  <description>
    Generic TCP/IP bridge for Chinese cobot arms (xArm, JAKA, Dobot, Fairino, Elite, Rokae).
    Publishes joint states and TF. Accepts pose and joint commands.
    Swap brand via the 'brand' ROS parameter — no code changes needed.
  </description>
  <maintainer email="robot@roboai.com">cobot</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
